--- a/FE/confusion/src/Components/Login/Login.css
+++ b/FE/confusion/src/Components/Login/Login.css
@@ -54,3 +54,126 @@ body, html, .signin-container {
         max-width: 100%; /* Adjusts the width for very small screens */
     }
 }
+
+
+/* Logo */
+.form-login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    background-color: #f0f2f5b5; /* Adjust as needed */
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+.background-image {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    width: 170px; /* Adjust size as needed */
+    height: 170px; /* Adjust size as needed */
+    border-radius: 50%; /* Make the logo circular */
+    display: flex;
+    position: relative;
+    left: -80px;
+    top: -40px;
+}
+
+.background-image {
+    position: relative; /* Ensure relative positioning for absolute positioning of text */
+}
+
+.background-image h4 {
+    display: flex;
+    position: absolute;
+    bottom: 28%; /* Position at the bottom of the container */
+    left:14%; /* Position at the center horizontally */
+    transform: translateX(-70%); /* Center horizontally */
+    margin-bottom: 10px; /* Adjust spacing from the image */
+    color: #333; /* Adjust text color */
+    font-size: 26px; /* Adjust font size */
+    font-weight: bold; /* Adjust font weight */
+    /* Add any additional styles as needed */
+}
+
+/* Phần login */
+
+.background-login {
+    background-color: white;
+    padding: 0 60px;
+    border-radius: 20px;
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    max-width: 800px;
+    margin: 0 auto;
+    transform: translateX(30%);
+}
+
+.background-login h1 {
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
+.formlogin{
+    display: block;
+    position: relative;
+    left: -10%;
+}
+.remember-forgot-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: -40%; /* Adjust the left margin as needed */
+    
+}
+
+.check {
+    margin-right: 28%; /* Adjust the right margin as needed */
+    white-space: nowrap;
+}
+
+.forgot-password-link {
+    text-decoration: none;
+    color: #333;
+    font-size: 14px;
+    white-space: nowrap; /* Prevent the text from wrapping */
+    /* Add any additional styles as needed */
+}
+
+.form-item {
+    margin-top: 20px;
+}
+
+.form-item p {
+    text-align: right; /* Align text to the right */
+}
+
+.form-item p a {
+    color: red;
+    text-decoration: none;
+}
+
+.form-item p a:hover {
+    text-decoration: underline;
+}
+
+.submit{
+    width: 150%;
+    display: block;
+    position: relative;
+    left: -40%;
+    top: -10px;
+    color: white;
+    height: 40px;
+    border-radius: 20px;
+    font-size: 18px;
+}
+
+.changeform{
+    margin-left: -8%;
+}
