--- a/FE/confusion/src/Components/Prelogin/Prelogin.css
+++ b/FE/confusion/src/Components/Prelogin/Prelogin.css
@@ -61,15 +61,15 @@ html,
 }
 
 /* Logo */
-.form-register {
+.form-prelogin {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 70vh;
   background-color: #f0f2f5b5;
-  padding: 30px 130px;
+  padding: 0 118px;
   max-width: 800px;
-  margin: 131px 250px;
+  margin: 100px 400px;
 }
 
 .background-image {
@@ -106,83 +106,35 @@ html,
 }
 
 /* Phần login */
-.background-login-register {
+.background-login-pre {
   background-color: white;
-  padding: 0 106px;
+  padding: 40px 104px;
   border-radius: 20px;
   max-width: 800px;
   transform: translateX(16%);
 }
 
-.background-login-register h1 {
+.background-login-pre h4 {
   text-align: center;
-  margin-bottom: 20px;
+  width: 226%;
+  margin-left: -60%;
+  margin-top: 20%;
+  line-height: 26px;
+  font-size: 20px;
 }
 
-.formlogin {
-  display: block;
-  /* Removed relative positioning */
-  margin-left: -26%;
-
+.buttonchange{
+    margin-bottom: 20%;
+    width: 200%;
+    height: 100%;
+    margin-left: -20%;
+    margin-right: 20%;
+    
 }
 
-.remember-forgot-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* Margin-left adjustment depends on desired layout */
-  margin-left: -2%;
-}
-
-.check {
-  margin-left: -30%;
-  white-space: nowrap;
-}
-
-.forgot-password-link {
-  text-decoration: none;
-  color: #333;
-  font-size: 14px;
-  white-space: nowrap;
-  margin-left: 40%;
-}
-
-.form-item {
-  margin-top: 20px;
-}
-
-.form-item p {
-  text-align: right;
-}
-
-.form-item p a {
-  color: red;
-  text-decoration: none;
-}
-
-.form-item p a:hover {
-  text-decoration: underline;
-}
-
-.submit {
-  width: 150%;
-  /* Removed width: 150% and left positioning */
-  display: block;
-  /* Removed relative positioning */
-  color: white;
-  height: 40px;
-  border-radius: 20px;
-  font-size: 18px;
-  margin-left: -30%;
-}
-
-.changeform {
-  margin-left: -20%;
-  /* Adjust margin-left if needed */
-  margin-top: 10%;
-}
-
-.ant-form-item-explain-error {
-  text-align: left;
-  width: 150%;
+.buttonchangesign{
+    margin-bottom: 20%;
+    width: 166%;
+    height: 100%;
+    margin-left: -16%;
 }
