--- a/FE/confusion/src/Components/Home/Home.css
+++ b/FE/confusion/src/Components/Home/Home.css
@@ -1,115 +1,99 @@
-/* * {
-    padding: 0;
-    width: auto;
-}
-
-.Header {
-    width: 1920px;
-    height: 150px;
-    background-color: #FADCF9;
-    margin-top: -24%;
-}
-
-.Header_Search {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-    padding-left: 10px;
-}
-
-.Header_Search Input {
-    background-color: #f0eaf0;
-    width: 25%;
-    margin-top: 4%;
-    margin-left: 8%;
-}
-
-.Searchicon {
-    font-size: 18px;
-    top: 10%;
-}
-.Header_Logo {
-    margin-top: -5.5%;
-}
-.logo1 {
-    width: 70px;
-    height: 70px;
-    margin-left: 48%;
-    margin-top: 0%;
-    border-radius: 50px;
-    align-items: center;
-}
-.Header_Name {
-    padding: -10px;
-    margin-left: 48.8%;
-}
-.Header_Account_Cart {
-    margin-left: 85%;
-} */
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 * {
+    width: 100%;
+    height: 100%;
+    margin: 0;
     padding: 0;
-    margin: 0; /* Thêm margin 0 để loại bỏ khoảng cách */
-    box-sizing: border-box; /* Đảm bảo kích thước phần tử bao gồm padding và border */
 }
 
+/* Header */
 .Header {
-    width: 282%;
-    height: 150px;
+    width: 100%;
+    height: 20vh;
+    /* Sử dụng 20% chiều cao của màn hình làm chiều cao cho Header */
     background-color: #FADCF9;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
-    margin-top: -74%;
-    margin-left: -91%;
+    padding: 0 5%;
+    /* Thay đổi padding để phù hợp với kích thước của khung trình duyệt */
 }
 
-.Header_Search {
-    display: flex;
-    align-items: center;
-    width: 20%;
-}
-
-.Header_Search Input {
-    background-color: #f0eaf0;
-    width: 96%;
-    margin-right: 10px;
-}
-
-.Searchicon {
-    font-size: 18px;
-    margin-left: -1275%;
-    display: flex;
-    position: relative;
+/* Header Name */
+.Header_Name {
+    position: absolute;
+    top: calc(10% + 44px);
+    left: 96vh;
+    transform: translateX(-50%);
+    font-size: 4vh;
+    font-family: "Inria Serif", serif;
+    width: 100px;
+    height: 100px;
 }
 
 .Header_Logo {
-  position: relative;
+    height: 90px;
+    width: 90px;
+    margin-top: 24%;
+    position: fixed;
+    top: -38%; /* Đưa nó vào trung tâm theo chiều dọc */
+    left: 50%; /* Đưa nó vào trung tâm theo chiều ngang */
+    transform: translate(-50%, -50%); 
 }
 
 .logo1 {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%; /* Thay đổi border-radius thành 50% để tạo hình tròn */
-    /* margin-right: 10px; Thay đổi margin từ margin-left thành margin-right */
-    position: relative;
-    display: flex;
-}
-
-.Header_Name {
-    font-size: 18px; /* Thêm kích thước chữ cho tên */
-
+    height: 10vh;
+    width: auto;
+    border-radius: 50%;
 }
 
 .Header_Account_Cart {
-    display: flex; /* Sử dụng flexbox để căn chỉnh các phần tử bên trong */
-    align-items: center; /* Căn chữa đứng giữa dọc */
+    width: 350px;
+    height: 100px;
+    display: flex; /* Sử dụng display: flex; để chia đều không gian cho hai icon */
+    align-items: center; /* Căn giữa theo chiều dọc */
 }
 
-.Header_Ads {
+.Usericon, .Carticon {
+    flex-grow: 1;
+    width: 150px;
+    height: 100px;
+    margin: 0px 10px;
+    font-size: 40px;
+}
+.Carticon {
+    flex-grow: 1; /* Mỗi icon sẽ chiếm một phần bằng nhau của không gian */
+    margin: 0 20px; /* Tạo khoảng cách 10px giữa hai icon */
+    margin-right: 230px;
+}
+
+.Header_Search {
+    width: 300px;
+    height: 100px;
     display: flex;
-    align-items: center;
-    margin-top: 10px; 
-    justify-items: center;
+    position: relative;
+}
+.Header_Search Input, .Header_Search Button {
+    height: 34px;
+    margin-top: 12%;
+}
+.Header_Search Button {
+    border-radius: 18%;
+    width: 20%;
+}
+
+
+/* Body */
+.Body {
+    margin-top: 5vh;
+    /* Sử dụng 5% chiều cao của màn hình làm khoảng cách giữa Header và Body */
+}
+
+/* Body Image */
+.body1 {
+    height: 10vh;
+    /* Sử dụng 10% chiều cao của màn hình làm kích thước hình ảnh */
+    width: auto;
+    /* Tự động điều chỉnh chiều rộng để giữ tỷ lệ */
 }
