--- a/FE/confusion/src/Components/Home/Home.css
+++ b/FE/confusion/src/Components/Home/Home.css
@@ -1,84 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
+.body {
+    height: 100vh; /* Đảm bảo chiều cao bằng với cửa sổ trình duyệt */
+    margin: 0; /* Đảm bảo không có lề xung quanh body */
+    padding: 0; /* Đảm bảo không có padding xung quanh body */
 }
-/* Home.css */
-.Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 30px;
-    background-color: #FADCF9;
-    color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+
+.content {
     width: 100%;
-    box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+    padding-top: 4%;
+    height: calc(100vh - 100px); /* 100px là chiều cao của Header */
+    overflow-x: hidden; /* Ẩn thanh cuộn ngang */
 }
 
-.Header_Search {
+.welcome {
+    text-align: center;
     display: flex;
-    align-items: center;
-    position: relative;
-    left: 8%;
-}
-
-.Header_Search .ant-input {
-    border-radius: 10px 0 0 10px;
-    border-right: none;
-    padding: 10px;
-}
-
-.Header_Search .ant-btn {
-    border-radius: 0 4px 4px 0;
-    background-color: rgba(0, 217, 255, 0.622);
-    border: none;
-    color: black;
-    height: 42px;
-}
-
-
-
-.Header_Logo .logo1 {
-    height: 80px;
-    width: 80px;
-    border-radius: 50%;
-    position: relative;
-    align-items: center;
     justify-content: center;
-    left: -26%;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 24%;
 }
 
-.Header_Name {
-    font-size: 32px;
+.image-container {
+    width: 360px;
+    height: 210px;
+    margin: 0 10px;
+}
+
+.image-text {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5px;
     font-weight: bold;
-    margin-left: 15px;
-    color: black;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    left: -50%;
-    text-transform: uppercase;
 }
 
-.Header_Account_Cart {
-    display: flex;
-    align-items: center;
-    position: relative;
-    right: 6%;
-    
+.logo1, .logo2, .logo3 {
+    width: 360px;
+    height: 360px;
 }
 
-.Header_Account_Cart .Usericon,
-.Header_Account_Cart .Carticon {
-    font-size: 26px;
-    margin-left: 20px;
+.logo1 {
+    margin-left: -20%;
+}
+
+.logo2 {
+    margin-left: -16px;
+}
+
+.logo3 {
+    margin-left: 10px;
+}
+
+.body {
+    height: 100vh;
+    overflow-y: auto;
+}
+
+.scroll-down-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
     cursor: pointer;
-    color: black;
-    
 }
+
+.scroll-down-btn:hover {
+    background-color: #555;
+}
+
