--- a/FE/confusion/src/Components/Header/Header.css
+++ b/FE/confusion/src/Components/Header/Header.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 20vh;
     /* Sử dụng 20% chiều cao của màn hình làm chiều cao cho Header */
-    background-color: #FADCF9;
+    background-color: #D2C7C4;
     display: flex;
     position: fixed;
     top: 0;
