--- a/FE/confusion/src/Components/QuanLyKhachHang/QuanLyKhachHang.css
+++ b/FE/confusion/src/Components/QuanLyKhachHang/QuanLyKhachHang.css
@@ -1,5 +1,5 @@
-/* Cải thiện bố cục chung */
-.HomeAdmin {
+
+.QuanLyKhachHang {
     width: 100%;
     height: 100vh;
     padding: 0;
@@ -28,6 +28,17 @@
     height: 40px;
     margin-left: 1620px;
     color: #303030; /* Màu biểu tượng */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Đổ bóng */
+
+}
+.HomeOutlined {
+    width: 40px;
+    height: 40px;
+    margin-right: 12px;
+    margin-left: 18px;
+    color: #333;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Đổ bóng */
+
 }
 
 /* Định dạng phần tiêu đề trang */
@@ -73,7 +84,7 @@
 .AdminTableList li {
     list-style-type: none;
     padding: 12px 10px; /* Tạo khoảng cách trên và dưới cho mỗi dòng */
-    font-size: 20px; /* Điều chỉnh kích thước chữ */
+    font-size: 18px; /* Điều chỉnh kích thước chữ */
     /* font-weight: lighter; In đậm */
     text-align: center;
     display: flex;
@@ -91,6 +102,13 @@
     color: #007bff; /* Màu chữ khi di chuột qua */
 }
 
+.qlkh{
+    width: 370px;
+    box-shadow: 2px 8px 8px rgba(0, 0, 0, 1); /* Đổ bóng */    
+}
+.qlkh a {
+    font-weight: bold;
+}
 /* Định dạng phần tổng kết */
 .AdminSummary {
     display: flex;
@@ -129,30 +147,6 @@ li {
     border-radius: 5px; /* Bo tròn góc */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Đổ bóng */
 }
-
-/* Định dạng bảng đơn hàng */
-.OrderTable {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.OrderTable th,
-.OrderTable td {
-    padding: 8px;
-    border: 1px solid #ddd;
-    width: auto;
-}
-
-.OrderTable th {
-    background-color: #f2f2f2; /* Màu nền tiêu đề */
-    font-weight: bold;
-    color: #303030; /* Màu chữ tiêu đề */
-}
-
-/* .OrderTable tbody tr:nth-child(even) {
-    /* background-color: #f9f9f9; Màu nền hàng chẵn
-} */
-
 .AdminHeader {
     background-color:#D2C7C4;
 }
@@ -164,4 +158,48 @@ li {
 }
 .AdminTableList li img {
     margin-right: 10px; /* Để tạo khoảng cách giữa hình ảnh và văn bản */
+}
+
+/* bắt đầu cái mới */
+.AdminCreateAccount{
+width: 140px;
+height: 60px;
+box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+display: flex;
+margin-top: 18px;
+margin-left: 18px;
+}
+.AdminCreateAccount p{
+margin-top: 24px;
+}
+.AdminCreateAccountLogo {
+    width: 40px;
+    height: 40px;
+    margin-left: 2%;
+    margin-top: 14px;
+} 
+
+.AdminContent1 {
+    margin-top: 2%;
+    font-size: 24px;
+    padding: 20px;
+    background-color: #D2C7C4; /* Màu nền */
+    border-radius: 5px; /* Bo tròn góc */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Đổ bóng */
+}
+.TableAdminqlkh {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.TableAdminqlkh th,
+.TableAdminqlkh td {
+    padding: 8px;
+    border: 1px solid #ddd;
+    width: auto;
+}
+.TableAdminqlkh th {
+    background-color: #f2f2f2; /* Màu nền tiêu đề */
+    font-weight: bold;
+    color: #303030; /* Màu chữ tiêu đề */
 }
