--- a/FE/confusion/src/Components/QuanLySanPham/QuanLySanPham.css
+++ b/FE/confusion/src/Components/QuanLySanPham/QuanLySanPham.css
@@ -1,5 +1,5 @@
-/* Cải thiện bố cục chung */
-.HomeAdmin {
+
+.QuanLySanPham {
     width: 100%;
     height: 100vh;
     padding: 0;
@@ -73,7 +73,7 @@
 .AdminTableList li {
     list-style-type: none;
     padding: 12px 10px; /* Tạo khoảng cách trên và dưới cho mỗi dòng */
-    font-size: 20px; /* Điều chỉnh kích thước chữ */
+    font-size: 18px; /* Điều chỉnh kích thước chữ */
     /* font-weight: lighter; In đậm */
     text-align: center;
     display: flex;
@@ -91,6 +91,13 @@
     color: #007bff; /* Màu chữ khi di chuột qua */
 }
 
+.qlsp{
+    width: 370px;
+    box-shadow: 2px 8px 8px rgba(0, 0, 0, 1); /* Đổ bóng */    
+}
+.qlsp a {
+    font-weight: bold;
+}
 /* Định dạng phần tổng kết */
 .AdminSummary {
     display: flex;
@@ -129,30 +136,6 @@ li {
     border-radius: 5px; /* Bo tròn góc */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Đổ bóng */
 }
-
-/* Định dạng bảng đơn hàng */
-.OrderTable {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.OrderTable th,
-.OrderTable td {
-    padding: 8px;
-    border: 1px solid #ddd;
-    width: auto;
-}
-
-.OrderTable th {
-    background-color: #f2f2f2; /* Màu nền tiêu đề */
-    font-weight: bold;
-    color: #303030; /* Màu chữ tiêu đề */
-}
-
-/* .OrderTable tbody tr:nth-child(even) {
-    /* background-color: #f9f9f9; Màu nền hàng chẵn
-} */
-
 .AdminHeader {
     background-color:#D2C7C4;
 }
@@ -165,3 +148,5 @@ li {
 .AdminTableList li img {
     margin-right: 10px; /* Để tạo khoảng cách giữa hình ảnh và văn bản */
 }
+
+/* bắt đầu cái mới */
