--- a/FE/confusion/src/Components/Register/Register.css
+++ b/FE/confusion/src/Components/Register/Register.css
@@ -1,16 +1,6 @@
-/* General Styles (from previous code) */
-body,
-html,
-.signin-container {
+*{
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  font-family: Arial, sans-serif;
 }
 
 /* Container for the background image */
@@ -38,7 +28,7 @@ html,
   z-index: 1;
   padding: 20px;
   background: rgba(255, 255, 255, 0.8);
-  border-radius: 8px;
+  /* border-radius: 8px; */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 100%;
@@ -65,7 +55,7 @@ html,
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: 52vh;
   background-color: #f0f2f5b5;
   padding: 30px 130px;
   max-width: 800px;
@@ -96,7 +86,7 @@ html,
 .background-image h4 {
   display: flex;
   position: absolute;
-  bottom: 20%;
+  /* bottom: 20%; */
   left: 50%;
   transform: translateX(-50%);
   margin-bottom: 10px;
@@ -117,6 +107,7 @@ html,
 .background-login-register h1 {
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 10%;
 }
 
 .formlogin {
