--- a/FE/confusion/src/Components/Prelogin/Prelogin.css
+++ b/FE/confusion/src/Components/Prelogin/Prelogin.css
@@ -4,11 +4,8 @@ html,
 .signin-container {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
   font-family: Arial, sans-serif;
 }
@@ -38,7 +35,6 @@ html,
   z-index: 1;
   padding: 20px;
   background: rgba(255, 255, 255, 0.8);
-  border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 100%;
