--- a/FE/confusion/src/Components/Register/Register.css
+++ b/FE/confusion/src/Components/Register/Register.css
@@ -28,11 +28,10 @@
   z-index: 1;
   padding: 20px;
   background: rgba(255, 255, 255, 0.8);
-  border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 /* Responsive Adjustments */
@@ -55,7 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: 52vh;
   background-color: #f0f2f5b5;
   padding: 30px 130px;
   max-width: 800px;
@@ -86,7 +85,7 @@
 .background-image h4 {
   display: flex;
   position: absolute;
-  bottom: 20%;
+  /* bottom: 20%; */
   left: 50%;
   transform: translateX(-50%);
   margin-bottom: 10px;
