--- a/FE/confusion/src/Components/Prelogin/Prelogin.css
+++ b/FE/confusion/src/Components/Prelogin/Prelogin.css
@@ -39,7 +39,7 @@ html,
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 /* Responsive Adjustments */
