--- a/FE/confusion/src/Components/Bodycateogry/Bodycategory.css
+++ b/FE/confusion/src/Components/Bodycateogry/Bodycategory.css
@@ -33,12 +33,26 @@
 .bodycate-container-image img {
     max-width: 100%;
     height: auto;
-    margin-bottom: 10px; /* Space between images */
+    margin-bottom: 10px;
+    /* Space between images */
     margin-left: 20%;
 }
 
+
+.link-image {
+    margin-top: -10%;
+    background-color: #E7CBE0;
+    padding: 16px;
+    border-radius: 50px;
+    width: 6vw;
+    text-align: center;
+    margin-left: 30%;
+    text-decoration: none;
+}
+
 .bodycate-container-image-2 {
-    margin-top: 10px; /* Optional: additional margin for the second image */
+    margin-top: 30px;
+    /* Optional: additional margin for the second image */
     height: auto;
 }
 
@@ -51,4 +65,14 @@
     height: 134vh;
     margin: 0 auto;
     margin-left: 10%;
+}
+
+.link-image-2{
+    background-color: #E7CBE0;
+    width: 6vw;
+    text-align: center;
+    padding: 16px;
+    border-radius: 50px;
+    margin-left: 40%;
+    transform: translate(20%, -130%);
 }
