--- a/FE/confusion/src/Components/Footer/Footer.css
+++ b/FE/confusion/src/Components/Footer/Footer.css
@@ -1,11 +1,10 @@
-
-
 .footer {
     background-color: #FADCF9;
-    width: 100vw;  /* Ensure the footer spans the full viewport width */
-    box-sizing: border-box;  /* Ensure padding is included in width */
+    /* width: 100vw;  Ensure the footer spans the full viewport width */
+    box-sizing: border-box;
+    /* Ensure padding is included in width */
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
 }
 
@@ -13,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    width: 100%;
+    width: 1000%;
     margin-left: 20%;
 }
 
@@ -32,10 +31,11 @@
 }
 
 .footer-column li {
+    margin-top: 4%;
     margin-bottom: 5px;
     display: flex;
     align-items: center;
-    line-height: 44px;
+    line-height: 24px;
 }
 
 .footer-column li svg {
@@ -46,15 +46,27 @@
     text-align: center;
     padding: 10px;
     width: 100%;
-    background-color: #FADCF9;  /* Matches the footer background */
+    background-color: #FADCF9;
+    /* Matches the footer background */
 }
 
-.logofooter{
+.logofooter {
     border-radius: 50%;
     width: 80px;
     height: 80px;
     float: right;
     margin-right: 6%;
-    margin-top: -5%;
+    margin-top: 200%;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+    /* Để căn giữa theo chiều dọc */
+}
+
+.footer-column-second li {
+    margin-left: 10px;
+    /* Khoảng cách giữa biểu tượng và danh sách */
+    line-height: 36px;
+}
