--- a/FE/confusion/src/Components/Login/Login.css
+++ b/FE/confusion/src/Components/Login/Login.css
@@ -177,3 +177,16 @@
   text-align: left;
   width: 150%;
 }
+
+/* Add this in your CSS file */
+.welcome-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.welcome-message {
+  font-size: 2rem;
+}
