--- a/FE/confusion/src/Components/Contact/Contact.css
+++ b/FE/confusion/src/Components/Contact/Contact.css
@@ -4,7 +4,8 @@
 }
 
 .contactall h1{
-    margin-top: 2%;
+    margin-top: 1%;
+    text-align: center;
 }
 
 .contactalldes {
@@ -12,7 +13,7 @@
 }
 
 .contact-title p {
-    line-height: 60px;
+    line-height: 30px;
 }
 
 .contact-box{
