--- a/FE/confusion/src/Components/Cart/Cart.css
+++ b/FE/confusion/src/Components/Cart/Cart.css
@@ -101,7 +101,7 @@
     color: black;
     text-decoration: none;
     border-radius: 4px;
-    margin-top: 20px; /* Điều chỉnh khoảng cách với các phần tử trên */
+    margin-top: 20px; 
     transition: background-color 0.3s ease;
 }
 
