--- a/FE/confusion/src/Components/Payment/Payment.css
+++ b/FE/confusion/src/Components/Payment/Payment.css
@@ -1,6 +1,8 @@
 .payment-container {
     padding: 20px;
     font-family: Arial, sans-serif;
+    height: 740px;
+    overflow-y: auto
 }
 
 .payment-content {
@@ -39,6 +41,7 @@
 
 .total-price {
     margin-top: 20px;
+    text-align: right;
 }
 
 .payment-method {
