--- a/FE/confusion/src/Components/Admin/ManageAccount.css
+++ b/FE/confusion/src/Components/Admin/ManageAccount.css
@@ -79,7 +79,7 @@
     opacity: 1;
     width: 70%;
     transition-duration: .3s;
-    padding-right: 10px;
+    /* padding-right: 10px; */
 }
 
 .Btn:active {
