--- a/FE/confusion/src/Components/Admin/ManageAccount.css
+++ b/FE/confusion/src/Components/Admin/ManageAccount.css
@@ -175,15 +175,16 @@
 .AdminTableList {
     padding: 0;
     margin: 0;
-    list-style-type: none;    
+    list-style-type: none;
 }
 
 .AdminTableList > div {
     padding: 10px 2px;
     font-size: 16px;
     display: flex;
-    align-items: center;
+align-items: center;
     margin-bottom: 20px;
+    text-decoration: none; 
 }
 
 
